# Tarot-LP-BC-Calculator

./: Life Path & Major Arcana Calculator.ipynb  README.md  main.py  pyproject.toml
codes/: Birth Card Calculator.ipynb  Life Path & Major Arcana Calculator.ipynb  bc_cal_embed_trinket.txt  tarotPowerCardCalculatorWidget.txt
